--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
             <div class="footer-section social">
                 <h3>Ми у соцмережах</h3>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://x.com/?lang=ru"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/?gl=UA"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
